# gabby

./: CMakeLists.txt  README.md
.github/workflows/: cmake-x86_64-linux.yml
src/: api.cc  api.h  api_test.cc  http_server.cc  http_server.h  http_server_test.cc  log.cc  log.h  main.cc  service.cc  service.h  service_test.cc
src/api/: openai.cc  openai.h  openai_test.cc
src/http/: router.cc  router.h  router_test.cc  server.cc  server.h  server_test.cc  socket.cc  socket.h  test_client.cc  test_client.h  thread_pool.cc  thread_pool.h  types.cc  types.h
src/inference/: config.cc  config.h  generator.cc  generator.h  safetensors.cc  safetensors.h  tokenizer.cc  tokenizer.h  tokenizer_test.cc
src/json/: json.cc  json.h  json_test.cc  parser.cc  parser.h  parser_test.cc
src/model/: loader.cc  loader.h  model.h
src/test/: env.h  test.cc  test.h  test_main.cc
src/utils/: logging.cc  logging.h  pointers.cc  pointers.h  thread_pool.cc  thread_pool.h  thread_pool_test.cc
